sample index page (test)

--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -83,7 +83,7 @@
 								</a>
 							</li>
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle account" data-toggle="dropdown">
+								<div class="dropdown-toggle account" data-toggle="dropdown">
 									<div class="avatar">
 										<img src="img/avatar.jpg" class="img-rounded" alt="avatar" />
 									</div>
@@ -92,7 +92,7 @@
 										<span class="welcome">Welcome,</span>
 										<span>Jane Devoops</span>
 									</div>
-								</a>
+								</div>
 								<ul class="dropdown-menu">
 									<li>
 										<a href="#">
