using fluid layout

--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -6,6 +6,13 @@
 <title>Admin Index</title>
 </head>
 <body>
-	<div layout:fragment="content">List content</div>
+	<div layout:fragment="content">
+		<ol class="breadcrumb">
+			<li class="active"><a th:href="@{/admin/index}">Admin</a></li>
+		</ol>
+		<div>Admin</div>
+
+	</div>
+
 </body>
 </html>
