--- a/src/main/webapp/WEB-INF/templates/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/layout/admin.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container-fluid">
 		<div layout:fragment="content">CONTENT</div>
 	</div>
 	<script type="text/javascript" th:src="@{#{resource.jquery.js}}"></script>
