--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<ol class="breadcrumb">
-			<li class="active"><a th:href="@{/admin/index}">Admin</a></li>
-		</ol>
+		<div>
+			<ol class="breadcrumb">
+				<li class="active"><a th:href="@{/admin/index}">Admin</a></li>
+			</ol>
+		</div>
 		<div>Admin</div>
 
 	</div>
