--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -4,6 +4,7 @@
 	layout:decorator="layout/admin">
 <head>
 <title>User List</title>
+<link rel="stylesheet" th:href="@{#{resource.datatables.css}}"></link>
 </head>
 <body>
 	<div layout:fragment="content">
@@ -11,11 +12,39 @@
 			<ol class="breadcrumb">
 				<li><a th:href="@{/admin/index}">Admin</a></li>
 				<li class="active"><a th:href="@{/admin/user/list}"
-					th:text="List of users">Nothing</a></li>
+					th:text="${'List of users'}">Nothing</a></li>
 			</ol>
 		</div>
-	
+		<div class="container">
+			<table id="table"
+				class="table table-striped table-hover table-condensed">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Name</th>
+						<th>Password</th>
+						<th>Remove</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="item: ${list}">
+						<td><span class="item-label item-id"
+							th:text="${item.username}">ID</span></td>
+						<td><a class="name"
+							th:href="@{/admin/user/edit(id=${item.username})}" href="#"><span
+								th:text="${item.fullname}">Name</span></a></td>
+						<td><a href="#" class="link-change-password">Change</a></td>
+						<td><a href="#" class="link-remove">Remove</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
-
+	<div layout:fragment="javascript">
+		<script type="text/javascript" th:src="@{#{resource.datatables.js}}"></script>
+		<script type="text/javascript"
+			th:src="@{/resources/js/common/list.js}"></script>
+		<script type="text/javascript" th:src="@{/resources/js/user/list.js}"></script>
+	</div>
 </body>
 </html>
