with data table.

--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -5,6 +5,7 @@
 <head>
 <title>User List</title>
 <link rel="stylesheet" th:href="@{#{resource.datatables.css}}"></link>
+<link rel="stylesheet" th:href="@{#{resource.bootswatch.css}}"></link>
 </head>
 <body>
 	<div layout:fragment="content">
