datatable css included on every page

--- a/src/main/webapp/WEB-INF/templates/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/layout/admin.html
@@ -12,6 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE"
 	th:text="#{app.name}">Task List</title>
+<link rel="stylesheet" th:href="@{#{resource.datatables.css}}"></link>
 <link rel="stylesheet" th:href="@{#{resource.bootswatch.css}}"></link>
 <link rel="stylesheet" th:href="@{#{resource.fontawesome.css}}"></link>
 <script type="text/javascript" th:src="@{#{resource.modernizr.js}}"></script>
