data tables js and css are on the main template

--- a/src/main/webapp/WEB-INF/templates/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/layout/admin.html
@@ -56,6 +56,7 @@
 	</div>
 	<script type="text/javascript" th:src="@{#{resource.jquery.js}}"></script>
 	<script type="text/javascript" th:src="@{#{resource.bootstrap.js}}"></script>
+	<script type="text/javascript" th:src="@{#{resource.datatables.js}}"></script>
 	<div class="hidden" layout:fragment="javascript"></div>
 </body>
 </html>
