--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -29,9 +29,8 @@
 					<tr th:each="item: ${list}">
 						<td><span class="item-label item-id"
 							th:text="${item.username}">ID</span></td>
-						<td><a class="name"
-							th:href="@{/admin/user/edit(id=${item.username})}" href="#"><span
-								th:text="${item.fullname}">Name</span></a></td>
+						<td><a th:href="@{/admin/user/edit(id=${item.username})}"
+							href="#"><span th:text="${item.fullname}">Name</span></a></td>
 						<td><a href="#" class="link-change-password">Change</a></td>
 						<td><a href="#" class="link-remove">Remove</a></td>
 					</tr>
@@ -40,7 +39,6 @@
 		</div>
 	</div>
 	<div layout:fragment="javascript">
-		<script type="text/javascript" th:src="@{#{resource.datatables.js}}"></script>
 		<script type="text/javascript"
 			th:src="@{/resources/js/common/list.js}"></script>
 		<script type="text/javascript" th:src="@{/resources/js/user/list.js}"></script>
