--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div>
+		<div class="container">
 			<ol class="breadcrumb">
 				<li><a th:href="@{/admin/index}">Admin</a></li>
 				<li class="active"><a th:href="@{/admin/user/list}"
@@ -15,27 +15,41 @@
 			</ol>
 		</div>
 		<div class="container">
-			<table id="table"
-				class="table table-striped table-hover table-condensed">
-				<thead>
-					<tr>
-						<th>ID</th>
-						<th>Name</th>
-						<th>Password</th>
-						<th>Remove</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="item: ${list}">
-						<td><span class="item-label item-id"
-							th:text="${item.username}">ID</span></td>
-						<td><a th:href="@{/admin/user/edit(id=${item.username})}"
-							href="#"><span th:text="${item.fullname}">Name</span></a></td>
-						<td><a href="#" class="link-change-password">Change</a></td>
-						<td><a href="#" class="link-remove">Remove</a></td>
-					</tr>
-				</tbody>
-			</table>
+			<div class="row">
+				<div class="col-lg-2">
+					<p>
+						<a th:href="#{/admin/user/add}" class="btn btn-block btn-primary"><span
+							class="fa fa-fw fa-2 fa-plus"></span> Add</a>
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<table id="table"
+						class="table table-striped table-hover table-condensed">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Name</th>
+								<th>Password</th>
+								<th>Remove</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="item: ${list}">
+								<td><span class="item-label item-id"
+									th:text="${item.username}">ID</span></td>
+								<td><a th:href="@{/admin/user/edit(id=${item.username})}"
+									href="#"><span th:text="${item.fullname}">Name</span></a></td>
+								<td><a href="#" class="link-change-password">Change</a></td>
+								<td><a href="#" class="link-remove">Remove</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div layout:fragment="javascript">
