--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-lg-2">
 					<p>
-						<a th:href="#{/admin/user/add}" class="btn btn-block btn-primary"><span
+						<a th:href="@{/admin/user/add}" class="btn btn-block btn-primary"><span
 							class="fa fa-fw fa-2 fa-plus"></span> Add</a>
 					</p>
 				</div>
