--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -10,8 +10,7 @@
 		<div class="container">
 			<ol class="breadcrumb">
 				<li><a th:href="@{/admin/index}">Admin</a></li>
-				<li class="active"><a th:href="@{/admin/user/list}"
-					th:text="${'List of users'}">Nothing</a></li>
+				<li class="active"><a th:href="@{/admin/user/list}">Users</a></li>
 			</ol>
 		</div>
 		<div class="container">
