standard look and feel for index page

--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div>
+		<div class="container">
 			<ol class="breadcrumb">
 				<li class="active"><a th:href="@{/admin/index}">Admin</a></li>
 			</ol>
 		</div>
-		<div>Admin</div>
-
+		<div class="container">
+			<div>Admin</div>
+		</div>
 	</div>
 
 </body>
