--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -44,7 +44,8 @@
 									href="#"><span class="item-label item-id"
 										th:text="${item.username}">?id?</span></a></td>
 								<td><span th:text="${item.fullname}">?name?</span></td>
-								<td><a href="#" class="link-change-password">?change?</a></td>
+								<td><a href="#" class="link-change-password"
+									th:text="#{label.change}">?change?</a></td>
 								<td><a href="#" class="link-remove btn-danger"><span
 										th:title="#{label.remove}" class="fa fa-fw fa-2 fa-times"></span></a></td>
 							</tr>
