--- a/src/main/webapp/WEB-INF/templates/admin/user/add.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/add.html
@@ -4,18 +4,17 @@
 	layout:decorator="layout/admin">
 <head>
 <title
-	th:text="${#{breadcrumb.admin} + '::' + #{breadcrumb.admin.users} + '::' + #{breadcrumb.admin.users.add}}">add</title>
+	th:text="#{breadcrumb.admin} + '::' + #{breadcrumb.admin.users} + '::' + #{breadcrumb.admin.users.add}">add</title>
 </head>
 <body>
 	<div layout:fragment="content">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a th:href="@{/admin/index}"
-					th:text="${#{breadcrumb.admin}">admin</a></li>
+				<li><a th:href="@{/admin/index}" th:text="#{breadcrumb.admin}">?admin?</a></li>
 				<li><a th:href="@{/admin/user/list}"
-					th:text="${#{breadcrumb.admin.users}">users</a></li>
+					th:text="#{breadcrumb.admin.users}">?users?</a></li>
 				<li><a class="active" th:href="@{/admin/user/add}"
-					th:text="${#{breadcrumb.admin.users.add}">add</a></li>
+					th:text="#{breadcrumb.admin.users.add}">?add?</a></li>
 			</ol>
 		</div>
 		<div class="container">
@@ -24,29 +23,32 @@
 					<form id="form" method="post" th:action="@{/admin/user/insert}"
 						action="#" class="form-horizontal" role="form">
 						<div class="form-group form-group-sm">
-							<label for="username" class="col-sm-4 control-label">Username</label>
+							<label for="username" class="col-sm-4 control-label"
+								th:text="#{label.user.username}">?username?</label>
 							<div class="col-sm-8">
 								<input type="text" class="form-control" name="username"
 									id="username" />
 							</div>
 						</div>
 						<div class="form-group form-group-sm">
-							<label for="name" class="col-sm-4 control-label">Name</label>
+							<label for="name" class="col-sm-4 control-label"
+								th:text="#{label.user.fullname}">?name?</label>
 							<div class="col-sm-8">
 								<input type="text" class="form-control" name="fullname"
 									id="fullname" />
 							</div>
 						</div>
 						<div class="form-group form-group-sm">
-							<label for="password" class="col-sm-4 control-label">Password</label>
+							<label for="password" class="col-sm-4 control-label"
+								th:text="#{label.user.password}">?password?</label>
 							<div class="col-sm-8">
 								<input type="password" class="form-control" name="password"
 									id="password" />
 							</div>
 						</div>
 						<div class="form-group form-group-sm">
-							<label for="confirmPassword" class="col-sm-4 control-label">Confirm
-								Password</label>
+							<label for="confirmPassword" class="col-sm-4 control-label"
+								th:text="#{label.user.password.confirm}">?confirm?</label>
 							<div class="col-sm-8">
 								<input type="password" class="form-control"
 									name="confirmPassword" id="confirmPassword" />
@@ -54,7 +56,8 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-8 col-sm-offset-4">
-								<button type="submit" class="btn btn-primary btn-block">Save</button>
+								<button type="submit" class="btn btn-primary btn-block"
+									th:text="#{label.save}">?save?</button>
 							</div>
 						</div>
 					</form>
