--- a/src/main/webapp/WEB-INF/templates/layout/admin.html
+++ b/src/main/webapp/WEB-INF/templates/layout/admin.html
@@ -11,7 +11,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE"
-	th:text="#{app.name}">Task List</title>
+	th:text="#{app.name}"></title>
 <link rel="stylesheet" th:href="@{#{resource.datatables.css}}"></link>
 <link rel="stylesheet" th:href="@{#{resource.bootswatch.css}}"></link>
 <link rel="stylesheet" th:href="@{#{resource.fontawesome.css}}"></link>
