replaced mustachejs js because hoganjs is smaller.

--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -64,7 +64,7 @@
 	</div>
 	<div layout:fragment="javascript">
 		<script type="text/javascript" th:src="@{#{resource.jquery.ui.js}}"></script>
-		<script type="text/javascript" th:src="@{#{resource.mustachejs.js}}"></script>
+		<script type="text/javascript" th:src="@{#{resource.hoganjs.js}}"></script>
 		<script type="text/javascript" th:src="@{#{resource.jquery.form.js}}"></script>
 		<script type="text/javascript"
 			th:src="@{/resources/js/common/list.js}"></script>
