rename "-delete" to "-remove" because saga syntax highlighting sees delete as a keyword.

--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -58,8 +58,8 @@
 			</div>
 		</div>
 		<div class="hidden">
-			<div th:replace="layout/dialog :: dialog-delete"></div>
-			<a id="link-action-delete" th:href="@{/admin/user/remove}"></a>
+			<div th:replace="layout/dialog :: dialog-remove"></div>
+			<a id="link-action-remove" th:href="@{/admin/user/remove}"></a>
 		</div>
 	</div>
 	<div layout:fragment="javascript">
