--- a/src/main/webapp/WEB-INF/templates/layout/dialog.html
+++ b/src/main/webapp/WEB-INF/templates/layout/dialog.html
@@ -3,21 +3,21 @@
 <head>
 </head>
 <body>
-	<div th:fragment="dialog-delete" class="hidden">
-		<div id="dialog-confirm-delete" title="Delete confirmation">
+	<div th:fragment="dialog-remove" class="hidden">
+		<div id="dialog-confirm-remove" title="Delete confirmation">
 			<p>
 				<span class="dialog-message"></span>
 			</p>
 			<div class="hidden">
-				<div id="dialog-confirm-delete-label-yes" th:text="#{label.yes}"></div>
-				<div id="dialog-confirm-delete-label-no" th:text="#{label.no}"></div>
+				<div id="dialog-confirm-remove-label-yes" th:text="#{label.yes}"></div>
+				<div id="dialog-confirm-remove-label-no" th:text="#{label.no}"></div>
 				<div class="dialog-message-template"
 					th:text="#{dialog.confirm.delete}"></div>
 			</div>
 		</div>
-		<form id="form-delete" action="#" method="post">
+		<form id="form-remove" action="#" method="post">
 			<input type="hidden" name="id" class="value" value=""
-				id="form-delete-id" />
+				id="form-remove-id" />
 		</form>
 	</div>
 </body>
